# CLOUDENGINE

./: .gitignore  CMakeCache.txt  CMakeLists.txt  INTERNET_RESEARCH_TEXT_RENDERING.md  LICENSE  PROJECT_SUMMARY.md  README.md  SUMMARY.md  build.bat  build_m2.py  build_output.txt  debug2.py  debug_log.txt  do_mod.py  engine_run_start.txt  full_modify.py  index_shaders_temp.bat  log.txt  m1.py  m2.py  modify.ps1  modify.py  modify2.ps1  modify_engine.py  modify_script.ps1  nul)  run_debug_player.bat  run_output.txt  run_temp.txt  run_test_15sec.bat  run_test_multiplayer.bat  run_test_network.bat  simple.py  stdout10.txt  stdout11.txt  stdout12.txt  stdout13.txt  stdout14.txt  stdout15.txt  stdout16.txt  (+30 more)
.cline/: CLAUDE.md  GUIDE.md  clinerules.json  session-recovery.md
.clinerules/agents/: engine-specialist.md  gameplay-programmer.md  network-programmer.md  render-engine-specialist.md  ui-programmer.md
.clinerules/hooks/: session-stop.ps1  session-stop.sh  sync_to_synapse.py
.clinerules/rules/: basic-rules.md  engine-code.md  engine-development.md  gameplay-code.md  memory-search.md  network-code.md  shader-code.md  ui-code.md
.clinerules/skills/: INDEX.md
.clinerules/skills/index-project/: SKILL.md
.clinerules/skills/memory-stats/: SKILL.md
.clinerules/skills/search-docs/: SKILL.md
.clinerules/skills/task-context/: SKILL.md
.clinerules/workflows/: README.md  mcp-context-workflow.md  mcp-memory-workflow-es.md  mcp-memory-workflow.md  mcp-stats-workflow.md
build_test/: ALL_BUILD.vcxproj.filters  CLOUDENGINE.slnx  CMakeCache.txt  CloudEngine.vcxproj.filters  INSTALL.vcxproj.filters  JoltMinimalTest.vcxproj.filters  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_test/CloudEngine.dir/Debug/: CloudEngine.exe.recipe
build_test/Debug/shaders/: cloud_advanced.frag  cloud_raymarch.frag
build_test/JoltMinimalTest.dir/Debug/: JoltMinimalTest.exe.recipe
build_test/libs/glfw/: ALL_BUILD.vcxproj.filters  GLFW.slnx  INSTALL.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj.filters
build_test/shaders/: debug.frag  fullscreen.vert
build_test_new/: CMakeCache.txt
build_test_ninja/: CMakeCache.txt
data/models/: ship_3.glb
debug/: gltf_rendering_session_9-10.md
docs/: AD_PITCH_DEBUG_2026-04-23.md  BUILD_ITERATION_2026-04-22.md  BUILD_SYSTEM.md  DOCUMENTATION_PLAN.md  FLOATING_ORIGIN_ANALYSIS.md  ITERATION_PLAN.md  JOLT_DEBUG_SESSION_2026-04-22.md  LARGE_WORLD_COORDINATES.md  MIGRATION_GUIDE.md  RENDER_PIPELINE_ANALYSIS_2026-04-21.md  RENDER_PIPELINE_FIX.md  SESSION_2026-04-20_SHADER_SYSTEM.md  SESSION_2026-04-21_RENDER_FIX_ANALYSIS.md  SESSION_LOG_2026-04-20.md  SESSION_LOG_2026-04-20_CIRCULAR_WORLD.md  SESSION_LOG_2026-04-20_NETWORK_SYNC.md  SESSION_NEXT_PROMPT.md  SHIP_CONTROLS_FIX_2026-04-23.md  SHIP_ROTATION_ANALYSIS_2026-04-23.md  UNITY_ISMS_ANALYSIS.md
docs/CLOUDENGINE/: 03_MINIMAL_PHYSICS_ENGINE.md  08_CIRCULAR_WORLD_ARCHITECTURE.md  09_OPEN_SOURCE_LIB_STACK.md  CODE_REVIEW_2026-04-24.md  ITERATION_PLAN_EXTENDED.md  Master-prompt-deep-research-CLOUDENGINEIDEA.md  PHYSICS_SYSTEM_ANALYSIS.md  SCALE_ANALYSIS.md  SYNTHESIS_MASTER.md
docs/CLOUDENGINE/Iterations/: SESSION_LOG_2026-04-19.md  SESSION_LOG_2026-04-20-SHADER.md  SESSION_LOG_2026-04-20.md  SESSION_LOG_2026-04-20_NETWORK.md  SESSION_LOG_2026-04-20_NETWORK_ECS.md  SESSION_LOG_2026-04-20_PLAYER_VISUALIZATION.md  SESSION_LOG_2026-04-21.md
docs/CLOUDENGINE/Research/: 01_VOLUMETRIC_CLOUD_RENDERING.md  02_INFINITE_WORLD_ARCHITECTURE.md  04_NETWORKING_CLOUD_MMO.md  05_ENGINE_CORE_INTEGRATION.md  07_CUSTOM_ENGINE_ARCHITECTURE.md  10_MINIMAL_ENGINE_ARCHITECTURE.md  MINIMAX_API_FIX.md  MINIMAX_MCP_GUIDE.md  Master-prompt-CUSTOM-ENGINE-OPEN-SOURCE.md  NEW_01_SIMPLE_ENGINE_OVERVIEW.md  NEW_02_SIMPLE_CLOUD_RENDERING.md  NEW_03_MIGRATION_GUIDE.md  NEW_README.md  RAG_MEMORY_ARCHITECTURE.md  SYNAPSE_CLINE_CONFIG.md  SYNAPSE_ENV_CONFIG.md  SYNAPSE_MCP_SETUP.md  SYNAPSE_SETUP.md
docs/CLOUDENGINE/Sessions/: NEXT_SESSION_PROMPT.md
docs/architecture/: adr-001-ui-system-architecture.md  adr-002-text-rendering-system.md  adr-003-gltf-model-loading.md
docs/bugs/: BUG-SHIP_ROTATION_FIX_2026-04-23.md  BUG-SHIP_THRUST_LOCAL_SPACE_2026-04-23.md  DIRECTION_INDICATOR_2026-04-23.md
docs/documentation/: INDEX.md
docs/documentation/enet/: README.md  hosting.md  packets.md  setup.md  tutorial.md
docs/documentation/flecs/: README.md
docs/documentation/glad/: README.md
docs/documentation/glfw/: README.md
docs/documentation/glm/: README.md
docs/documentation/jolt/: AERODYNAMICS.md  INTEGRATION.md  README.md
docs/documentation/spdlog/: README.md
docs/gdd/: GDD_02_World_Environment.md  NEW_GDD_00_Overview.md  NEW_GDD_01_Core_Gameplay.md  NEW_GDD_02_World_Environment.md
libs/glad/src/: glad.c  glad.c.start
shaders/: cloud_advanced.frag  color.frag  color.vert  debug_gradient.frag  ui_shader.frag  ui_shader.vert
src/: main.cpp
src/clouds/: cloud_budget.cpp  cloud_budget.h  cloud_generator.cpp  cloud_generator.h  cloud_lod.cpp  cloud_lod.h  lighting_system.cpp  lighting_system.h  noise.cpp  noise.h  wind_system.cpp  wind_system.h
src/core/: config.h  engine.cpp  engine.cpp.1  engine.h  logger.cpp  logger.h  logging.h
src/ecs/: components.h  pipeline.cpp  pipeline.h  systems.h  world.cpp  world.h
src/network/: client.cpp  client.h  network_manager.cpp  network_manager.h  packet_types.h  server.cpp  server.h
src/platform/: window.cpp  window.h
src/rendering/: asset_manager.cpp  asset_manager.h  camera.cpp  camera.h  cloud_renderer.cpp  cloud_renderer.h  depth_fbo.cpp  gltf_mesh.cpp  gltf_mesh.h  primitive_mesh.cpp  primitive_mesh.h  quad.cpp  quad.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shader_manager.cpp  shader_manager.h  shader_system.cpp  shader_system.h
src/ui/: ui_common_types.h  ui_manager.cpp  ui_manager.h  ui_renderer.cpp  ui_renderer.h
src/world/: chunk.cpp  chunk.h  chunk_manager.cpp  chunk_manager.h  circular_world.cpp  circular_world.h  world_components.h
tests/: CMakeLists.txt  README.md  test_helpers.hpp
unity_migration/: README.md
(+179 files in other folders)
